Toggle EUR/BTC for Summary

--- a/CoinView/CoinView.csproj
+++ b/CoinView/CoinView.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <Compile Remove="Controllers\DataController.cs" />
     <Compile Remove="Models\CoinViewContext.cs" />
+    <Compile Remove="Models\DataObjects\SummaryBTCDO.cs" />
+    <Compile Remove="Models\DataObjects\SummaryEURDO.cs" />
     <Compile Remove="Models\User.cs" />
   </ItemGroup>
   <ItemGroup>
