--- a/CoinView/CoinView.csproj
+++ b/CoinView/CoinView.csproj
@@ -13,6 +13,9 @@
     <Compile Remove="Models\User.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Remove="Views\Shared\_BitcoinValue.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
     <None Remove="Properties\PublishProfiles\CustomProfile.pubxml" />
   </ItemGroup>
   <ItemGroup>
